# flowstate-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/automation/: apps.py  tasks.py
apps/core/: urls.py  views.py
apps/projects/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py
apps/tasks/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/webhooks/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/webhooks/migrations/: 0001_initial.py
apps/workspaces/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/workspaces/migrations/: 0001_initial.py  0002_membership.py
config/: asgi.py  celery.py  settings.py  urls.py
config/settings/: __init__.py  base.py  pydantic_settings.py
config/settings/environments/: development.py  production.py
